Upgraded Gradle to 7.5 and added GitHub actions